--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,6 +31,7 @@
   --text-xs: 12px;
   --text-sm: 14px;
   --text-base: 16px;
+  --text-lg: 18px;
 
   --font-weight-regular: 400;
   --font-weight-medium: 500;
@@ -82,7 +83,7 @@ body {
 
 /* Button base */
 .btn {
-  background-color: var(--color-card);
+  background-color: var(--color-cardColor);
   border: 1px solid var(--color-border-color);
   border-radius: var(--radius-default);
   color: var(--color-txt-secondary);
@@ -93,7 +94,7 @@ body {
 .btn-wide {
   width: 100%;
   border-radius: var(--radius-default);
-  background-color: var(--color-card);
+  background-color: var(--color-cardColor);
   border: 1px solid var(--color-border-color);
   padding: 16px;
   color: var(--color-txt-secondary);
@@ -106,9 +107,16 @@ body {
 }
 .text-sm {
   font-size: var(--text-sm);
+  line-height: var(--line-height-default);
 }
 .text-base {
   font-size: var(--text-base);
+  line-height: var(--line-height-default);
+}
+
+.text-lg {
+  font-size: var(--text-lg);
+  line-height: var(--line-height-default);
 }
 
 /* Font weights */
