--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,10 +8,11 @@
   --white: #fff;
 
   /* Light mode colors */
-  --color-bg: #ffffff;
-  --color-cardColor: #f5f5f5;
+
+  --color-bg: #f4f5f6;
+  --color-cardColor: rgba(255,255,255,0.8);
   --color-cardColor-hover: #eaeaea;
-  --color-border-color: rgba(0, 0, 0, 0.1);
+  --color-border-color: rgba(0, 0, 0, 0.09);
   --color-txt-main: #000000;
   --color-txt-button: rgba(0, 0, 0, 0.6);
   --color-txt-secondary: rgba(0, 0, 0, 0.5);
@@ -29,6 +30,8 @@
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
   --accent: oklch(0.97 0 0);
+  --warning: #d69712;
+  --logo: #3E3E3E;
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
@@ -240,6 +243,8 @@ body {
   --color-chart-1: var(--chart-1);
   --color-chart-2: var(--chart-2);
   --color-chart-3: var(--chart-3);
+  --color-warning: var(--warning);
+  --color-logo: var(--logo);
   --color-chart-4: var(--chart-4);
   --color-chart-5: var(--chart-5);
   --color-sidebar: var(--sidebar);
@@ -274,6 +279,8 @@ body {
   --chart-1: oklch(0.488 0.243 264.376);
   --chart-2: oklch(0.696 0.17 162.48);
   --chart-3: oklch(0.769 0.188 70.08);
+  --warning: #f2ca77;
+  --logo: #D1D1D1;
   --chart-4: oklch(0.627 0.265 303.9);
   --chart-5: oklch(0.645 0.246 16.439);
   --sidebar: oklch(0.205 0 0);
